--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "caophihung94/php-simple-html-dom-parser": "^1.7",
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/charts": "^5.0",
