--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         "drupal/geolocation": "^3.12",
         "drupal/hal": "^2.0",
         "drupal/paragraphs": "^1.15",
+        "drupal/recaptcha": "^3.2",
         "drupal/restui": "^1.21",
-        "drupal/textfield_counter": "^2.3"
+        "drupal/textfield_counter": "^2.3",
+        "drupal/views_autocomplete_filters": "^2.0"
     },
     "conflict": {
         "drupal/drupal": "*"
