--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/paragraphs": "^1.15",
         "drupal/real_aes": "^2.5",
         "drupal/recaptcha": "^3.2",
+        "drupal/remote_image": "^2.0",
         "drupal/restui": "^1.21",
         "drupal/sendgrid_api": "^2.0",
         "drupal/sendgrid_mailer": "^1.1",
