--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -60,6 +60,7 @@ jobs:
             - run: lando composer require --dev drupal/core-dev
             - run: lando ssh --command "cp .github/workflows/phpunit.xml core/phpunit.xml"
             - run: lando ssh --command "cp core/.env.example .env"
+            - run: lando info
             - run: lando drush site:install -y
             - run: lando drush cr
 
