--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -9,7 +9,7 @@ env:
     APP_ENV: testing
     APP_DEBUG: true
     DB_CONNECTION: mysql
-    DB_HOST: db
+    DB_HOST: database
     DB_PORT: 3306
     DB_DATABASE: drupal10
     DB_USERNAME: drupal10
