--- a/modules/custom/met_niwa/met_niwa.routing.yml
+++ b/modules/custom/met_niwa/met_niwa.routing.yml
@@ -1,18 +1,17 @@
 met_niwa.main:
-  path: '/met-niwa/run'
+  path: "/met-niwa/run"
   defaults:
-    _title: 'NIWA API'
+    _title: "NIWA API"
     _controller: '\Drupal\met_niwa\Controller\MetNiwaController'
   requirements:
-    _permission: 'access content'
+    _access: "TRUE"
   options:
-    no_cache: 'TRUE'
-
+    no_cache: "TRUE"
 
 met_niwa.settings:
-  path: '/admin/config/system/met-niwa'
+  path: "/admin/config/system/met-niwa"
   defaults:
-    _title: 'MET NIWA Configuration'
+    _title: "MET NIWA Configuration"
     _form: 'Drupal\met_niwa\Form\SettingsForm'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: "administer site configuration"
