--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  announcements_feed: 0
   automated_cron: 0
   backup_migrate: 0
   basic_auth: 0
@@ -44,6 +45,7 @@ module:
   menu_link_content: 0
   menu_ui: 0
   met_api: 0
+  met_api_test: 0
   met_data_converter: 0
   met_feel_earthquake: 0
   met_niwa: 0
@@ -52,6 +54,7 @@ module:
   met_tide_data: 0
   met_tk: 0
   met_warning: 0
+  migrate_file: 0
   mysql: 0
   node: 0
   options: 0
@@ -63,6 +66,8 @@ module:
   rest: 0
   restui: 0
   search: 0
+  sendgrid_api: 0
+  sendgrid_mailer: 0
   serialization: 0
   shortcut: 0
   system: 0
