--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -39,6 +39,7 @@ jobs:
       - run: lando drush si -y --db-url=mysql://drupal10:drupal10@database:3306/drupal10
       - run: lando drush cset system.site uuid "5bb79423-cfb5-4dd1-98fc-1efb2a54c645"
       - run: lando drush edel shortcut_set --bundle=default
+      - run: lando drush edel shortcut_link --bundle=default
       - run: lando drush cim --partial --source=config/site -y
 
       # Set private file path
