MAC-167: Test config import.

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -39,7 +39,7 @@ jobs:
       - run: lando drush si -y --db-url=mysql://drupal10:drupal10@database:3306/drupal10
       - run: lando drush cset system.site uuid "5bb79423-cfb5-4dd1-98fc-1efb2a54c645"
       - run: lando drush entity:delete shortcut_set
-      - run: lando drush en paragraphs
+      - run: lando drush en paragraphs met_warning met_tk met_niwa met_service met_spc met_api met_data_converter  -y
       - run: lando drush cim --source=config/site -y
 
       # Set private file path
