MAC-167: Fix issue with config import.

--- a/config/site/field.field.met_tk.met_tk.field_photo.yml
+++ b/config/site/field.field.met_tk.met_tk.field_photo.yml
@@ -13,7 +13,7 @@ entity_type: met_tk
 bundle: met_tk
 label: Photo
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
