--- a/config/site/field.field.met_tk.met_tk.field_indicator.yml
+++ b/config/site/field.field.met_tk.met_tk.field_indicator.yml
@@ -13,7 +13,7 @@ entity_type: met_tk
 bundle: met_tk
 label: Indicator
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
