MAC-167: Test update settings.php file.

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -8,7 +8,7 @@ env:
   LANDO_VERSION: v3.21.0
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -43,6 +43,7 @@ jobs:
       - run: lando drush cim --source=config/site -y
 
       # Set private file path
+      - run: lando ssh --command 'ls -la /app/sites/default/'
       - run: lando ssh --command 'mkdir /var/www/private'
       - run: lando ssh --command 'echo \$settings[\"file_private_path\"] = \"/var/www/private\"\; >> /app/sites/default/settings.php'
       - run: lando drush cr
