--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -55,6 +55,7 @@ jobs:
 
       - name: Fetch tide data from SPC API
         run: lando ssh --command "curl 'http://met-api.lndo.site/met-spc/run'"
+jobs: 
   test:
     steps:
       # Enable the test module
