--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -17,6 +17,9 @@ jobs:
         run: |
           sudo curl -fsSL -o /usr/local/bin/lando "https://files.lando.dev/cli/lando-linux-x64-${LANDO_VERSION}"
           sudo chmod +x /usr/local/bin/lando
+          sudo curl -sL https://deb.nodesource.com/setup_20.x | bash -
+          sudo apt-get install -y nodejs
+          sudo npm install -g newman
 
       # This is optional.
       - name: Cache Composer packages
@@ -54,7 +57,6 @@ jobs:
 
       # Copy test file to private directory
       - run: lando ssh --command 'cp -R modules/custom/met_api/test/modules/met_api_test/assets/. /var/www/private/'
-      - run: lando ssh --command 'ls -la /var/www/private'
 
       # This will run tests. If any tests fail, it will fail here.
       - name: Run tests TMS API
