--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -17,9 +17,17 @@ jobs:
         run: |
           sudo curl -fsSL -o /usr/local/bin/lando "https://files.lando.dev/cli/lando-linux-x64-${LANDO_VERSION}"
           sudo chmod +x /usr/local/bin/lando
-          sudo curl -sL https://deb.nodesource.com/setup_20.x | bash -
-          sudo apt-get install -y nodejs
-          sudo npm install -g newman
+
+      - name: Install node
+        run: |
+          sudo curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+          sudo nvm install 20
+
+      - name: Test node
+        run: node -v & npm v
+
+      - name: Install newman
+        run: npm install -g newman
 
       # This is optional.
       - name: Cache Composer packages
