--- a/config/site/rest.resource.met_api_evacuation_resource.yml
+++ b/config/site/rest.resource.met_api_evacuation_resource.yml
@@ -6,6 +6,7 @@ dependencies:
     - basic_auth
     - met_api
     - serialization
+    - user
 id: met_api_evacuation_resource
 plugin_id: met_api_evacuation_resource
 granularity: resource
@@ -16,3 +17,4 @@ configuration:
     - json
   authentication:
     - basic_auth
+    - cookie
