--- a/config/site/rest.resource.met_api_warning_resource.yml
+++ b/config/site/rest.resource.met_api_warning_resource.yml
@@ -6,6 +6,7 @@ dependencies:
     - basic_auth
     - met_api
     - serialization
+    - user
 id: met_api_warning_resource
 plugin_id: met_api_warning_resource
 granularity: resource
@@ -17,3 +18,4 @@ configuration:
     - xml
   authentication:
     - basic_auth
+    - cookie
