--- a/config/site/user.role.anonymous.yml
+++ b/config/site/user.role.anonymous.yml
@@ -8,6 +8,7 @@ dependencies:
     - comment
     - contact
     - filter
+    - node_view_permissions
     - search
 _core:
   default_config_hash: 6WavjUYXIegP9AAg2zXGx54MWIVoomC3SZhNiqe-Dyk
@@ -20,3 +21,5 @@ permissions:
   - 'access site-wide contact form'
   - 'search content'
   - 'use text format restricted_html'
+  - 'view any article content'
+  - 'view any page content'
