MAC-000: Fix the pipeline deployment.

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "drupal/sendgrid_mailer": "^1.1",
         "drupal/textfield_counter": "^2.3",
         "drupal/views_autocomplete_filters": "^2.0",
+        "drupal/views_data_export": "^1.4",
         "mglaman/composer-drupal-lenient": "^1.0",
         "paragi/php-websocket-client": "^1.0",
         "textalk/websocket": "1.0.*"
