--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -4,7 +4,7 @@ on:
   - pull_request
 
 env:
-  LANDO_VERSION: v3.18.0
+  LANDO_VERSION: v3.21.0
 
 jobs:
   build-test:
@@ -26,6 +26,14 @@ jobs:
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-
+
+      # Fix the latest lando issue
+      - uses: KengoTODA/actions-setup-docker-compose@v1
+        with:
+          version: '2.14.2' # the full version of `docker-compose` command
+
+      # Setup Lando
+      - run: lando setup
 
       # Boot Lando and set up Drupal
       - run: lando start
